<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="build_it_bigger_button_text">BUILD IT BIGGER</string>
    <string name="capstone_button_text">CAPSTONE: MY OWN APP</string>
    <string name="library_app_button_text">LIBRARY APP</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="scores_app_button_text">SCORES APP</string>
    <string name="spotify_streamer_button_text">SPOTIFY STREAMER</string>
    <string name="xyz_reader_button_text">XYZ READER</string>
</resources>
