<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:id="@+id/main_activity_title_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textColor="#000000" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_button_text"
        android:id="@+id/spotify_streamer_button"
        android:layout_below="@+id/main_activity_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_button_text"
        android:id="@+id/scores_app_button"
        android:layout_below="@+id/spotify_streamer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app_button_text"
        android:id="@+id/library_app_button"
        android:layout_below="@+id/scores_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_button_text"
        android:id="@+id/build_it_bigger_button"
        android:layout_below="@+id/library_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_button_text"
        android:id="@+id/xyz_reader_button"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="@dimen/main_activity_element_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button_text"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_reader_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#FF0000" />
</RelativeLayout>
